--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <div id="phoneContainer">
                     
                     <img id="phoneImg" src="style/assets/img/telephone.png">
-                    <p id="numberText">+1(920) - 213 - 46 -17</p>
+                    <p id="numberText">+1(920) - 213 - 46 - 17</p>
                 </div>
                 <div id="adressContainer">
-                    <p class="adress">Appleton, WI, United State</p>
+                    <p class="adress">Appleton, WI. United States</p>
                     <div class="SocialCard">
                         
                         <a class="social-link" href="#">
