--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <div class="servPriceBox">
                             <p class="priceLogo">Window cleaning</p>
                             <p class="priceText">Window cleaning provides professional services according to this prices:</p>
-                            <li>Window Cleaning (Easy access on one side)- <span class="price">$15/window.</span></li>
+                            <li>Window Cleaning (Easy access) - <span class="price">$15/window.</span></li>
                             <li>Window Cleaning (Exterior)- <span class="price">$15/window + window size + equipment.</span></li>
                         </div>                        </div>
                         </div>
