--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;1,300;1,400&family=Quicksand:wght@400;500;600&family=Raleway:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
     <script src="js/pageLoad.js"></script>
     <script src="js/anim.js"></script>
@@ -12,6 +15,7 @@
      <link rel="stylesheet" href="style/css/header.css" />
      <link rel="stylesheet" href="style/css/services.css" />
      <link rel="stylesheet" href="style/css/pricing.css" />
+     <link rel="stylesheet" href="style/css/map.css" />
     <title>Elite Cleaning</title>
 </head>
 
@@ -182,7 +186,13 @@
                     </div>
                 </div>
 
-            
+            <!-- MAP -->
+
+            <div id="backWhite">
+                    <div id="map">
+                        <div id="mapText">CONTANT US NOW TO GET A FREE QUOTE!</div>
+                    </div>
+            </div>
           </div>
 </body>
 
