--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;1,300;1,400&family=Quicksand:wght@400;500;600&family=Raleway:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;1,300;1,400&family=Quicksand:wght@400;500;600&family=Raleway:ital,wght@0,400;0,500;1,400;1,500&family=Roboto:wght@300&display=swap" rel="stylesheet">    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
     <script src="js/pageLoad.js"></script>
     <script src="js/anim.js"></script>
      <link rel="stylesheet" href="style/css/home.css" />
@@ -16,6 +17,8 @@
      <link rel="stylesheet" href="style/css/services.css" />
      <link rel="stylesheet" href="style/css/pricing.css" />
      <link rel="stylesheet" href="style/css/map.css" />
+     <link rel="stylesheet" href="style/css/mediaResponse.css" />
+
     <title>Elite Cleaning</title>
 </head>
 
@@ -72,7 +75,7 @@
              
 
                 <div id="fixedBox">
-                    <div id="fixedImgCont"><img id="fixedImg" src="style/assets/img/clean.png">
+                    <div id="fixedImgCont"><img id="fixedImg" src="style/assets/img/cleanFull.jpg">
                         <div id="fixedLogo"><div id="topText">
                             <div class="loader">
                                 <p>Professional</p>
