--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <div class="servPriceBox">
                             <div class="box">
                             <div class="card">
-                                <div class="card-img"><img class="servImg" src="style/assets/img/houseServ.jpg"></div>
+                                <div class="card-img" id="HomeImg"></div>
                                 <div class="card-info">
                                   <p class="text-title">Product title </p>
                                   <p class="text-body">Product description and details</p>
@@ -139,7 +139,7 @@
                                 </div>      
                                 <div class="box">
                                     <div class="card">
-                                        <div class="card-img"><img class="servImg" src="style/assets/img/houseServ.jpg"></div>
+                                        <div class="card-img" id="windowImg"></div>
                                         <div class="card-info">
                                           <p class="text-title">Product title </p>
                                           <p class="text-body">Product description and details</p>
@@ -167,7 +167,7 @@
                             <div class="servPriceBox">
                                 <div class="box">
                                 <div class="card">
-                                    <div class="card-img"><img class="servImg" src="style/assets/img/houseServ.jpg"></div>
+                                    <div class="card-img" id="gutImg"></div>
                                     <div class="card-info">
                                       <p class="text-title">Product title </p>
                                       <p class="text-body">Product description and details</p>
@@ -190,7 +190,7 @@
                                     </div>      
                                     <div class="box">
                                         <div class="card">
-                                            <div class="card-img"><img class="servImg" src="style/assets/img/houseServ.jpg"></div>
+                                            <div class="card-img" id="comImg"></div>
                                             <div class="card-info">
                                               <p class="text-title">Product title </p>
                                               <p class="text-body">Product description and details</p>
