--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
      <link rel="stylesheet" href="style/css/map.css" />
      <link rel="stylesheet" href="style/css/footer.css" />
      <link rel="stylesheet" href="style/css/mediaResponse.css" />
+     <link rel="stylesheet" href="style/css/resize/headerResize.css" />
 
     <title>Elite Cleaning</title>
 </head>
@@ -249,8 +250,9 @@
             <!-- Footer -->
             <div id="footerCont">
                 <div id="footer">
-                    <p id="phoneNumber">+1 (920) xxx-xx-xx</p> <p>Privacy Policy</p>
+                    <span>Privacy Policy</span> <span>|</span> <span>+1 (920) xxx-xx-xx</span> <span>|</span> <span>Cookies</span>
                 </div>
+                <p id="copyRight">© 2023 Elite Cleaning All Rights Reserved.</p>
             </div>
           </div>
 </body>
