--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
      <link rel="stylesheet" href="style/css/footer.css" />
      <link rel="stylesheet" href="style/css/mediaResponse.css" />
      <link rel="stylesheet" href="style/css/resize/headerResize.css" />
+     <link rel="stylesheet" href="style/css/resize/bodyResize.css" />
+
 
     <title>Elite Cleaning</title>
 </head>
@@ -82,6 +84,7 @@
                     <div id="fixedImgCont"><img id="fixedImg" src="style/assets/img/cleanFull.jpg">
                         <div id="fixedLogo"><div id="topText">
                             <div class="loader">
+                              <div id="line">
                                 <p>Professional</p>
                                 <div class="words">
                                     <span class="word"></span>
@@ -90,7 +93,9 @@
                                     <span class="word">Gutter</span>
                                     <span class="word">Commercial</span>
                                 </div>
-                                <p>Cleaning</p>
+                                <p id="pcText">Cleaning</p>
+                                </div>
+                                <span id="phoneText">Cleaning Services</span>
                          </div>
                         <span id="underSlogan">We pride ourselves on our attention to detail and our commitment to providing excellent customer service. We know that your home is your sanctuary, and we will treat it with the care and respect it deserves. Our cleaners are trained to work efficiently and effectively, ensuring that your home is cleaned to the highest standard in the shortest amount of time possible.</span>
                         </div></div>
@@ -137,7 +142,8 @@
                                     <li>Deep House Cleaning <span class="price">$150 - $1,500.</li>
                              </div>
                              </div>
-                                </div>      
+                                </div>    
+                                  
                                 <div class="box">
                                     <div class="card">
                                         <div class="card-img" id="windowImg"></div>
