--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <div id="servicesBigBox">
                             <div class="servPriceBox">
                                 <div class="box">
-                                <div class="card">
+                                <div class="card" id="gutCard">
                                     <div class="card-img" id="gutImg"></div>
                                     <div class="card-info">
                                       <p class="text-title">Product title </p>
@@ -196,7 +196,7 @@
                                  </div>
                                     </div>      
                                     <div class="box">
-                                        <div class="card">
+                                        <div class="card" id="comCard">
                                             <div class="card-img" id="comImg"></div>
                                             <div class="card-info">
                                               <p class="text-title">Product title </p>
