--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 </div>
                                 <span id="phoneText">Cleaning Services</span>
                          </div>
-                        <span id="underSlogan">We pride ourselves on our attention to detail and our commitment to providing excellent customer service. We know that your home is your sanctuary, and we will treat it with the care and respect it deserves. Our cleaners are trained to work efficiently and effectively, ensuring that your home is cleaned to the highest standard in the shortest amount of time possible.</span>
+                        <span id="underSlogan">We pride ourselves on our attention to detail and our commitment to providing excellent customer service. </span>
                         </div></div>
 
                         </div>
