--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <div class="card-img" id="HomeImg"></div>
                                 <div class="card-info">
                                   <p class="text-title">Home Cleaning</p>
-                                  <p class="text-body">Hard Floor, Carpets, House cleaning</p>
+                                  <p class="text-body">Floors, Carpets, House cleaning</p>
                                 </div>
                                 <div class="card-footer">
                                 <span class="text-title">$5 - $1,500</span>
