--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!-- Front-end designed and developed by Shon Danvudi. sdanvudi.com -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,7 +24,7 @@
      <link rel="stylesheet" href="style/css/resize/bodyResize.css" />
 
 
-    <title>Elite Cleaning</title>
+    <title>Top Tier Servicing</title>
 </head>
 
 
@@ -89,13 +88,13 @@
                                 <div class="words">
                                     <span class="word"></span>
                                     <span class="word">House</span>
-                                    <span class="word">Window</span>
-                                    <span class="word">Gutter</span>
                                     <span class="word">Commercial</span>
+                                    <span class="word">Landscaping</span>
+                                    <span class="word">Pruning</span>
                                 </div>
-                                <p id="pcText">Cleaning</p>
+                                <p id="pcText">Services</p>
                                 </div>
-                                <span id="phoneText">Cleaning Services</span>
+                                <span id="phoneText">Landscaping and Cleaning Services</span>
                          </div>
                         <span id="underSlogan">We pride ourselves on our attention to detail and our commitment to providing excellent customer service. </span>
                         </div></div>
@@ -108,9 +107,9 @@
                     <div id="empty"><div id="botStrip">               <div id="servicesTextContainer">
                         <span id="servicesText">OUR SERVICES</span>
                     </div></div></div>
-
-                 <!-- Services --> 
+                 <!-- Services -->
                 <div id="servicesContainer">
+                  <div class="catalog"><p>Cleaning Services</p></div>
                     <div id="servicesBigBox">
             
                         <div class="servPriceBox">
