--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                   <div class="card" id="comCard">
                                       <div class="card-img" id="comImg"></div>
                                       <div class="card-info">
-                                        <p class="text-title">Commercial Cleaning</p>
+                                        <p class="text-title">Commercial</p>
                                         <p class="text-body">Organizations / Business
                                         </p>
                                       </div>
@@ -149,7 +149,7 @@
                                   
                                     </div></div>
                                     <div class="priceBox">
-                                      <p class="priceLogo">Commercial cleaning</p>
+                                      <p class="priceLogo">Commercial</p>
                                       <p class="priceText">Commercial cleaning  services are priced accordingly:</p>
                                       <li>Industrial Vac</li>
                                    </div>
