--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                       <div class="card">
                                           <div class="card-img" id="lawnImg"></div>
                                           <div class="card-info">
-                                            <p class="text-title">Gutter Cleaning</p>
+                                            <p class="text-title">Lawn Rolling</p>
                                             <p class="text-body">Gutter clog removal</p>
                                           </div>
                                           <div class="card-footer">
@@ -211,9 +211,9 @@
                                         
                                         </div></div>
                                         <div class="priceBox">
-                                          <p class="priceLogo">Gutter cleaning</p>
-                                          <p class="priceText">Our gutter cleaning services are designed to provide a thorough and efficient cleaning solution for our clients to ensure their gutters are functioning optimally.</p>
-                                          <li>Gutter Cleaning - <span class="price">$5/ft.</span></li>
+                                          <p class="priceLogo">Lawn Rolling</p>
+                                          <p class="priceText">Level out the surface of the soil upon which a lawn is grown.</p>
+                                          <li>Lawn Rolling - <span class="price">$5/ft.</span></li>
                                        </div>
                                           </div>      
                                           <div class="box">
