--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p id="numberText">+1(920) - 213 - 46 - 17</p>
                 </div>
                 <div id="adressContainer">
-                    <p class="adress">Appleton, WI. United States.</p>
+                    <p class="adress">Wisconsin. United States.</p>
                     <div class="SocialCard">
                         
                         <a class="social-link" href="#">
