--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style/css/hm.css" />
     <link rel="stylesheet" href="style/css/header.css" />
     <link rel="stylesheet" href="style/css/footer.css" />
+    <link rel="stylesheet" href="style/css/resize/headerResize.css" />
+
     <title>Contact Us</title>
 </head>
 <body>
@@ -38,8 +40,8 @@
 
             <div id="formCont">
     <form class="form">
-    <p class="title">Register </p>
-    <p class="message">Signup now and get full access to our app. </p>
+    <p class="title">Contact Us </p>
+    <p class="message">Ask for more information or help. </p>
         <div class="flex">
         <label>
             <input required="" placeholder="" type="text" class="input">
@@ -58,15 +60,10 @@
     </label> 
         
     <label>
-        <input required="" placeholder="" type="password" class="input">
-        <span>Password</span>
+        <textarea required="" placeholder="Message" type="password" class="input"></textarea>
     </label>
-    <label>
-        <input required="" placeholder="" type="password" class="input">
-        <span>Confirm password</span>
-    </label>
-    <button class="submit">Submit</button>
-    <p class="signin">Already have an acount ? <a href="#">Signin</a> </p>
+
+    <button class="submit">Send</button>
 </form>
 </div>
 
