--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
                     <!-- Logo Strip -->
                 <div id="topBarPanel">
                     <div id="topBarLeft">
+                        <div id="hmLnk"></div>
                         <img id="logoImg" src="style/assets/img/logo.png">
                     </div>
                     <div id="topBarRight">
@@ -37,9 +38,8 @@
                    </div>
         
             </div>
-
             <div id="formCont">
-    <form class="form">
+    <form class="form" action="toptierservices9@gmail.com" method="POST">
     <p class="title">Contact Us </p>
     <p class="message">Ask for more information or help. </p>
         <div class="flex">
@@ -71,10 +71,11 @@
            <!-- Footer -->
            <div id="footerCont">
             <div id="footer">
-                <span>Privacy Policy</span> <span>|</span> <span>+1 (920) xxx-xx-xx</span> <span>|</span> <span>Cookies</span>
+                <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) xxx-xx-xx</span> <span>|</span> <span>Coduct of Use</span>
             </div>
             <p id="copyRight">© 2023 Top Tier Services. All Rights Reserved.</p>
         </div>
-      </div>
+        <script src="js/anim.js"></script>
+
 </body>
 </html>
