--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;1,300;1,400&family=Quicksand:wght@400;500;600&family=Raleway:ital,wght@0,400;0,500;1,400;1,500&family=Roboto:wght@300&display=swap" rel="stylesheet">    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
-    <script src="js/pageLoad.js"></script>
-    <script src="js/anim.js"></script>
      <link rel="stylesheet" href="style/css/home.css" />
      <link rel="stylesheet" href="style/css/header.css" />
      <link rel="stylesheet" href="style/css/services.css" />
@@ -37,9 +35,10 @@
 <div id="fixBar">
             <!-- Logo Strip -->
         <div id="topBarPanel">
-            <div id="topBarLeft">
-                <img id="logoImg" src="style/assets/img/logo.png">
-            </div>
+          <div id="topBarLeft">
+            <div id="hmLnk"></div>
+            <img id="logoImg" src="style/assets/img/logo.png">
+        </div>
             <div id="topBarRight">
                 <div id="phoneContainer">
                     
@@ -253,11 +252,12 @@
             <!-- Footer -->
             <div id="footerCont">
                 <div id="footer">
-                    <span>Privacy Policy</span> <span>|</span> <span>+1 (920) xxx-xx-xx</span> <span>|</span> <span>Cookies</span>
+                    <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) xxx-xx-xx</span> <span>|</span> <span>Coduct of Use</span>
                 </div>
                 <p id="copyRight">© 2023 Top Tier Services. All Rights Reserved.</p>
             </div>
-          </div>
+          <script src="js/anim.js"></script>
+
 </body>
 
 </html>
