--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,14 @@
                     <!-- Logo Strip -->
                 <div id="topBarPanel">
                     <div id="topBarLeft">
-                        <div id="hmLnk"></div>
+                        <a href="index.html"><div id="hmLnk"></div></a>
                         <img id="logoImg" src="style/assets/img/logo.png">
                     </div>
                     <div id="topBarRight">
                         <div id="phoneContainer">
                             
                             <img id="phoneImg" src="style/assets/img/telephone.png">
-                            <p id="numberText">+1(920) - 213 - 46 - 17</p>
+                            <p id="numberText">+1 (920) 636-08-31</p>
                         </div>
                         <div id="adressContainer">
                             <p class="adress">Wisconsin. United States.</p>
@@ -71,7 +71,7 @@
            <!-- Footer -->
            <div id="footerCont">
             <div id="footer">
-                <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) xxx-xx-xx</span> <span>|</span> <span>Coduct of Use</span>
+                <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) 636-08-31</span> <span>|</span> <span>Coduct of Use</span>
             </div>
             <p id="copyRight">© 2023 Top Tier Services. All Rights Reserved.</p>
         </div>
