--- a/policy.html
+++ b/policy.html
@@ -26,7 +26,7 @@
                             <div id="phoneContainer">
                                 
                                 <img id="phoneImg" src="style/assets/img/telephone.png">
-                                <p id="numberText">+1(920) - 213 - 46 - 17</p>
+                                <p id="numberText">+1 (920) 636-08-31</p>
                             </div>
                             <div id="adressContainer">
                                 <p class="adress">Wisconsin. United States.</p>
@@ -156,7 +156,7 @@
         <!-- Footer -->
         <div id="footerCont">
             <div id="footer">
-                <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) xxx-xx-xx</span> <span>|</span> <span>Coduct of Use</span>
+                <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) 636-08-31</span> <span>|</span> <span>Coduct of Use</span>
             </div>
             <p id="copyRight">© 2023 Top Tier Services. All Rights Reserved.</p>
         </div>
