--- a/policy.html
+++ b/policy.html
@@ -16,10 +16,11 @@
         <!-- Top level-->
         <div id="topBarContainer">
             <div id="fixBar">
+
                         <!-- Logo Strip -->
                     <div id="topBarPanel">
                         <div id="topBarLeft">
-                            <div id="hmLnk"></div>
+                            <a href="index.html"><div id="hmLnk"></div></a>
                             <img id="logoImg" src="style/assets/img/logo.png">
                         </div>
                         <div id="topBarRight">
@@ -29,8 +30,7 @@
                                 <p id="numberText">+1 (920) 636-08-31</p>
                             </div>
                             <div id="adressContainer">
-                                <p class="adress">Wisconsin. United States.</p>
-                               
+                                <p class="adress">Wisconsin. United States.</p>                            
             
                             </div>
                         </div>
