--- a/contact.html
+++ b/contact.html
@@ -58,9 +58,14 @@
         <input required="" placeholder="" type="email" class="input">
         <span>Email</span>
     </label> 
+
+    <label>
+        <input required="" placeholder="" type="number" class="input">
+        <span>Phone</span>
+    </label> 
         
     <label>
-        <textarea required="" placeholder="Message" type="password" class="input"></textarea>
+        <textarea required="" placeholder="Message" type="text" class="input"></textarea>
     </label>
 
     <button class="submit">Send</button>
