--- a/index.html
+++ b/index.html
@@ -271,6 +271,33 @@
                                                       </div>   
                                             </div>
                                             </div>
+                                            <div id="servicesBigBox">
+                                              <div class="servPriceBox">
+                                            
+                                                      <div class="box">
+                                                        <div class="card">
+                                                            <div class="card-img" id="handyImg"></div>
+                                                            <div class="card-info">
+                                                              <p class="text-title">Handyman</p>
+                                                              <p class="text-body">Home construction
+                                                              </p>
+                                                            </div>
+                                                            <div class="card-footer">
+                                                            <span class="text-title">Priced Per Job</span>
+                                                        
+                                                          </div></div>
+                                                          <div class="priceBox">
+                                                            <p class="priceLogo">Contact for more services</p>
+                                                            <li>Siding</li>
+                                                            <li>Roofing</li>
+                                                            <li>Repair</li>
+                                                            <li>Free Quote</li>
+                                                          </div>
+                                                            </div>   
+                                                  </div>
+                                                  </div>
+
+
                                       </div>
                         </div>
                               </div>
