--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <div id="mapText">CONTANT US NOW TO GET A FREE QUOTE!</div>
                         <div id="map">
                             <div class="SocialCardMap">
-                                <div id="callCont"><a href="contact.html">BOOK A CALL</a></div>
+                              <a href="contact.html"><div id="callCont">BOOK A CALL</div></a>
                               </div>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
             <!-- Footer -->
             <div id="footerCont">
                 <div id="footer">
-                    <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) 636-08-31</span> <span>|</span> <span>Conditions of Use</span>
+                    <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) 636-08-31</span>
                 </div>
                 <p id="copyRight">© 2023 Top Tier Services. All Rights Reserved.</p>
             </div>
