--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
            <!-- Footer -->
            <div id="footerCont">
             <div id="footer">
-                <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) 636-08-31</span> <span>|</span> <span>Coduct of Use</span>
+                <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) 636-08-31</span> 
             </div>
             <p id="copyRight">© 2023 Top Tier Services. All Rights Reserved.</p>
         </div>
