--- a/policy.html
+++ b/policy.html
@@ -127,7 +127,7 @@
     <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our privacy practices, please contact us at:</p>
     <p>Top Tier Services LLC.<br>
     Email: toptierservices9@gmail.com<br>
-    Phone: [Phone Number]</p>
+    Phone: +1 (920) 636-08-31</p>
     
     <p>Please note that this Privacy Policy applies solely to the information collected by Top Tier Services LLC. on the Website and through the Services.</p>
 </div>
@@ -156,7 +156,7 @@
         <!-- Footer -->
         <div id="footerCont">
             <div id="footer">
-                <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) 636-08-31</span> <span>|</span> <span>Coduct of Use</span>
+                <a href="policy.html">Privacy & Cookies</a> <span>|</span> <span>+1 (920) 636-08-31</span>
             </div>
             <p id="copyRight">© 2023 Top Tier Services. All Rights Reserved.</p>
         </div>
