--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                                     <span class="word"></span>
                                     <span class="word">House</span>
                                     <span class="word">Commercial</span>
+                                    <span class="word">Plowing</span>
                                     <span class="word">Landscaping</span>
-                                    <span class="word">Pruning</span>
                                 </div>
                                 <p id="pcText">Services</p>
                                 </div>
