--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
      <link rel="stylesheet" href="style/css/resize/headerResize.css" />
      <link rel="stylesheet" href="style/css/resize/bodyResize.css" />
 
+     <link rel="icon" href="style/assets/img/icon.jpg" type="img/icon">
 
     <title>Top Tier Servicing</title>
 </head>
