--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <div id="topBarPanel">
           <div id="topBarLeft">
            <a href="index.html"><div id="hmLnk"></div></a>
-            <img id="logoImg" src="style/assets/img/logo.png">
+            <img loading="lazy" id="logoImg" src="style/assets/img/logo.png">
         </div>
             <div id="topBarRight">
                 <div id="phoneContainer">
                     
-                    <img id="phoneImg" src="style/assets/img/telephone.png">
+                    <img loading="lazy" id="phoneImg" src="style/assets/img/telephone.png">
                     <p id="numberText">+1 (920) 636-08-31</p>
                 </div>
                 <div id="adressContainer">
